DLR-AllGroups, fix spacing bug on My Groups page

--- a/src/app/community/groups-feature/pages/my-groups/my-groups.page.scss
+++ b/src/app/community/groups-feature/pages/my-groups/my-groups.page.scss
@@ -1,7 +1,5 @@
 ion-content {
     --padding-top: 1rem;
-    --padding-start: 1rem;
-    --padding-end: 1rem;
 }
 
 ion-toolbar.purple-background {
@@ -36,8 +34,10 @@ ion-header {
 
 .groups-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    grid-gap: 0.75rem;
     gap: 0.75rem;
+    padding: 0.25rem;
 }
 
 .group-card-container {        
